@@ -1,3 +1,7 @@
+2010-04-18 Eric Wasylishen <ewasylishen@gmail.com>
+
+	* WinNSTableHeader: Add table header themeing
+
 2010-04-14 01:22-MDT Jonathan Gillaspie <jonathan.gillaspie@testplant.com>
 
 	* WinNSOpenPanel.m: Don't attempt to set file types if not specified.
